# blockchain-chat-app

./: Cargo.toml
src/: lib.rs
src/blockchain/: __tests__.rs  appendable.rs  mintable.rs  mod.rs  savable.rs  verifyable.rs
src/blocks/: __tests__.rs  hashable.rs  mod.rs  verifyable.rs
src/messages/: __tests__.rs  hashable.rs  mod.rs
src/utils/: __tests__.rs  db.rs  hashing.rs  json.rs  mod.rs
src/wallets/: __tests__.rs  accountable.rs  mod.rs  signable.rs
tmp/: 000020.sst  000030.sst  000038.sst  IDENTITY  LOG  LOG.old.1664483380172233  LOG.old.1664483380778471  LOG.old.1664483380778576  LOG.old.1664483394627739  LOG.old.1664483394628785  LOG.old.1664483775569394  LOG.old.1664483775569479  LOG.old.1664483840474937  LOG.old.1664483840475125  LOG.old.1664483939364553  LOG.old.1664483939366580  LOG.old.1664483951933059  LOG.old.1664483951933289  MANIFEST-000034  OPTIONS-000028
