[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sha256 = "1.0.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
ed25519-dalek = "1.0.1"
rand = "0.7.0"
rocksdb = "0.19.0"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"